# randomgen

./: .cirrus.yml  .coveragerc  .doctr-files  .drone.yml  .flake8  .gitattributes  .gitignore  .pep8speaks.yml  .travis.yml  =61  LICENSE.md  MANIFEST.in  README.md  README.rst  appveyor.yml  azure-pipelines.yml  benchmark.py  change-log.html  common.html  custom-bit-generators.html  custom-bit-generators.ipynb  entropy.html  evolution.html  extended-generator.html  extending.html  future.html  generator.html  genindex.html  index.html  legacy.html  meson.build  meson.options  multithreading.html  new-or-different.html  objects.inv  parallel.html  performance.html  py-modindex.html  pyproject.toml  references.html  (+11 more)
randomgen/: __init__.py  _deprecated_value.py  _pickle.py  _register.py  _seed_sequence.html  _seed_sequence.pxd  _seed_sequence.pyi  _seed_sequence.pyx  _testing.py  _version.py  aes.html  aes.pxd  aes.pyi  aes.pyx  api.pxd  blabla.pxd  blabla.pyi  blabla.pyx  bounded_integers.html  bounded_integers.pxd.in  bounded_integers.pyx.in  broadcasting.html  broadcasting.pxd  broadcasting.pyx  chacha.html  chacha.pxd  chacha.pyi  chacha.pyx  common.html  common.pxd  common.pyi  common.pyx  conftest.py  distributions.pxd  dsfmt.html  dsfmt.pxd  dsfmt.pyi  dsfmt.pyx  efiix64.html  efiix64.pxd  (+108 more)
randomgen/compat/: __init__.py
randomgen/examples/cython/: extending.pyx  extending_distributions.pyx  low_level.pyx  setup.py
randomgen/examples/numba/: extending.py  extending_distributions.py
randomgen/legacy/: __init__.py  _legacy.pyx  bounded_integers.html  bounded_integers.pxd.in  bounded_integers.pyx.in  distributions.pxd  legacy.py  legacy_distributions.pxd
randomgen/src/aesctr/: LICENSE.md  aesctr-test-data-gen.c  aesctr.c  aesctr.h  aesctr.orig.h  softaes.h  tiny-aes.c
randomgen/src/aligned_malloc/: aligned_malloc.h
randomgen/src/blabla/: blabla-orig.h  blabla-test-data-gen.cpp  blabla-test.c  blabla.c  blabla.h
randomgen/src/chacha/: chacha-benchmark.cpp  chacha-test-data-gen.cpp  chacha-v1.c  chacha.c  chacha.h  chacha.orig.h
randomgen/src/common/: array.h  cpu_features.c  cpu_features.h  inttypes.h  randomgen_config.h  randomgen_config_numpy.h  randomgen_endian.h  randomgen_immintrin.h  stdbool.h
randomgen/src/distributions/: distributions.c  distributions.h  distributions.orig.c  distributions.orig.h  hypergeometric.c  loggam.h  rg-distributions.c  rg-distributions.h  ziggurat_constants.h
randomgen/src/dsfmt/: dSFMT-benchmark.c  dSFMT-common.h  dSFMT-jump.c  dSFMT-jump.h  dSFMT-params.h  dSFMT-poly.h  dSFMT-test-gen.c  dSFMT.c  dSFMT.h  dsfmt-test-data-seed.h  dsfmt.c  dsfmt.h
randomgen/src/efiix64/: efiix64-test-gen.cpp  efiix64.c  efiix64.h
randomgen/src/entropy/: LICENSE.md  entropy.c  entropy.h
randomgen/src/hc-128/: hc-128-test-data-gen.c  hc-128.c  hc-128.h  hc-128.orig.c  hc-128.orig.h  hc128_ref.h  util.orig.c  util.orig.h
randomgen/src/jsf/: jsf-test-data-gen.cpp  jsf.c  jsf.h  jsf.hpp
randomgen/src/legacy/: distributions-boxmuller.c  distributions-boxmuller.h  legacy-distributions.c  legacy-distributions.h
randomgen/src/lxm/: lxm-test-data-gen.c  lxm.c  lxm.h
randomgen/src/mt19937/: clist_mt19937.txt  generate-jump-test.py  jump_mt19937-orig.c  jump_mt19937.c  mt119937-test-data-seed.h  mt19937-generate-jump-poly.c  mt19937-jump.c  mt19937-jump.h  mt19937-poly.h  mt19937-test-data-gen.c  mt19937.c  mt19937.h  poly-128.txt  randomkit.c  randomkit.h
randomgen/src/mt64/: mt64-test-data-gen.c  mt64-test-data-seed.h  mt64.c  mt64.h  mt64.orig.c  mt64.orig.h
randomgen/src/pcg32/: LICENSE.md  pcg-advance-64.c  pcg32-test-data-gen.c  pcg32.c  pcg32.h  pcg_variants.h
randomgen/src/pcg64/: LICENSE.md  lcg128mix.c  lcg128mix.h  pcg64-benchmark.c  pcg64-common.c  pcg64-common.h  pcg64-custom.c  pcg64-custom.h  pcg64-test-data-gen.c  pcg64-v2.c  pcg64-v2.h  pcg64.c  pcg64.h  pcg64.orig.h  pcg64_xslrr-test-data-gen.cpp  pcg_dxsm-test-data-gen.cpp  pcg_extras.hpp  pcg_random.hpp  pcg_uint128.hpp  pcg_xslrr-test-data-gen.cpp
randomgen/src/philox/: philox-4x32-test-data-gen.c  philox-benchmark.c  philox-test-data-gen.c  philox.c  philox.h
randomgen/src/philox4x32/: philox4x32-benchmark.c  philox4x32-test-data-gen.c  philox4x32.c  philox4x32.h
randomgen/src/rdrand/: rdrand.c  rdrand.h
randomgen/src/romu/: romu-orig.h  romu-test-data-gen.c  romu.c  romu.h
randomgen/src/sfc/: sfc-test-data-gen.c  sfc.c  sfc.h
randomgen/src/sfmt/: SFMT-calc-jump.hpp  calc-jump.cpp  sfmt-alti.h  sfmt-common.h  sfmt-jump.c  sfmt-jump.h  sfmt-neon.h  sfmt-params.h  sfmt-params19937.h  sfmt-poly.h  sfmt-sse2-msc.h  sfmt-sse2.h  sfmt-test-data-seed.h  sfmt-test-gen.c  sfmt.c  sfmt.h
randomgen/src/speck-128/: speck-128-common.h  speck-128-sse.h  speck-128.c  speck-128.h  speck-128.ref.c  speck-test-data-gen.cpp
randomgen/src/splitmix64/: LICENSE.md  splitmix64.c  splitmix64.h  splitmix64.orig.c
randomgen/src/squares/: squares-test-data-gen.c  squares.c  squares.h  squares.orig.h  squares.py
randomgen/src/threefry/: threefry-benchmark.c  threefry-test-data-gen.c  threefry.c  threefry.h  threefry4x32-test-data-gen.c
randomgen/src/tyche/: base_state.h  tyche-gen-test-data.cpp  tyche.c  tyche.h  tyche.orig.h  util.h
randomgen/src/xoroshiro128/: LICENSE.md  xoroshiro128-test-data-gen.c  xoroshiro128.c  xoroshiro128.h  xoroshiro128plus.orig.c  (+2 more)
randomgen/tests/: _shim_dist.c  _shim_dist.h  _shims.html  _shims.pxd  _shims.pxi  _shims.pyi  _shims.pyx  _utility.py  meson.build  practrand-driver.py  test_against_numpy.py  test_bit_generators_against_numpy.py  test_broadcasting.py  test_common.py  test_custom_pcg.py  test_direct.py  test_edges.py  test_extended_generator.py  test_final_release_changes.py  test_generator_117.py  test_generator_mt19937.py  test_generator_mt19937_regressions.py  test_lcg128mix.py  test_lcg128mix_pcg64dxsm.py  test_numpy_mt19937.py  test_randomstate.py  test_randomstate_regression.py  test_recent_numpy_changes.py  test_seed_sequence.py  test_sfc.py  test_smoke.py  test_stability.py  test_wrapper.py  test_wrapper_numba.py
(+426 files in other folders)
