[build-system]
build-backend = 'mesonpy'
requires = [
    'meson-python',
    "cython>=3.0.13,<4",  # Sync with CYTHON_MIN_VER in setup
    "numpy>=2.0.0,<3",
    "setuptools_scm[toml]>=9.2.0,<10",
]

[project]
name = "randomgen"
# Keep syned with requirements.txt
dependencies = [
  "numpy>=1.22.3,<3",
]
authors = [{ name = "Kevin Sheppard", email = "kevin.k.sheppard@gmail.com" }]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Unix",
    "Programming Language :: C",
    "Programming Language :: Cython",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Adaptive Technologies",
    "Topic :: Artistic Software",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering",
    "Topic :: Security :: Cryptography",
]
description = "Random generator supporting multiple PRNGs"
dynamic = [
  'version'
]
keywords = [
    "pseudo random numbers",
    "PRNG",
    "RNG",
    "RandomState",
    "random",
    "random numbers",
    "parallel random numbers",
    "PCG",
    "XorShift",
    "dSFMT",
    "MT19937",
    "Random123",
    "ThreeFry",
    "Philox",
    "ChaCha",
    "AES",
    "SPECK",
    "RDRAND",
]
license = "NCSA"
license-files = [ "LICENSE.md" ]
maintainers = [
  { name = "Kevin Sheppard", email = "kevin.k.sheppard@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.8"

[project.optional-dependencies]
test = [
  # test
  "pytest>=8.4.1,<9",
  "pytest-randomly",
  "pytest-xdist",
  "pytest-cov",
  "coverage[toml]",
  "meson",
  "ninja",
]
doc = [
  # Documentation
  "setuptools>=61",
  "wheel",
  "setuptools_scm[toml]>=8.0.3,<9",
  "oldest-supported-numpy",
  "cython>=3.0.13,<4",  # Sync with CYTHON_MIN_VER in setup
  "numpy >=1.22",
  "scipy >=1.5.0",
  "ipython >=8.0.1",
  "matplotlib >=3.0",
  "patsy >=0.5.3",
  "statsmodels >=0.13.5",
  "jinja2",
  "sphinx>=7",
  "seaborn",
  "numpydoc>=1.0.0",
  "nbsphinx",
  "sphinx-immaterial",
  "jupyter",
  "notebook",
  "sphinx-autodoc-typehints",
  "fonttools>=4.43.0", # not directly required, pinned by Snyk to avoid a vulnerability
  "jupyterlab>=4.4.8", # not directly required, pinned by Snyk to avoid a vulnerability
  "ipython>=7",
  "sphinx_immaterial",
  "nbconvert",
  "pickleshare",
  # Requirements for doc build, in addition to requirements.txt
  "pandas~=2.3.3",
]
dev = [
  # versioning
  "setuptools_scm[toml]>=9.2.0,<10",
  "packaging",
  # Performance
  "cython>=3.0.10",
  "numba>=0.55",
  # Graphics
  "matplotlib>=3",
  "seaborn",
  # Tests
  "pytest>=8.4.1,<9",
  "pytest-randomly",
  "pytest-xdist",
  "pytest-cov",
  # formatting
  "black[jupyter]~=25.9.0",
  "isort~=6.0",
  "colorama",
  "flake8",
  "flake8-bugbear",
  "mypy>=1.3",
  "ruff>=0.8.6",
  "pyupgrade>=3.4.0",
  "jupyterlab-code-formatter",
  "jupyterlab>=4.4.8",  # not directly required, pinned by Snyk to avoid a vulnerability
  "zipp>=3.19.1", # not directly required, pinned by Snyk to avoid a vulnerability
]


[project.urls]
homepage = "https://github.com/bashtage/randomgen"
documentation = "https://bashtage.github.io/randomgen/"
repository = "https://github.com/bashtage/randomgen"
changelog = "https://bashtage.github.io/randomgen/change-log.html"

[tool.meson-python.args]
setup = ['--vsenv']

[tool.setuptools_scm]
version_file = "arch/_version.py"

