[metadata]
description-file = README.md
license_file = LICENSE.md

[flake8]
max-line-length = 99
ignore = E203,W503,BLK100

[versioneer]
VCS = git
style = pep440
versionfile_source = randomgen/_version.py
versionfile_build = randomgen/_version.py
tag_prefix = v
parentdir_prefix = randomgen-

[isort]
sections=FUTURE,COMPAT,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
known_first_party=randomgen
known_third_party=Cython,numpy,matplotlib,pandas,patsy,pytest,statsmodels,seaborn
combine_as_imports=True
skip_glob=**/**/*.pyx,**/**/*.in
known_compat=setuptools,setuptools.*
force_sort_within_sections=True
force_to_top=True
profile=black

[tool:pytest]
filterwarnings =
   error:covariance is not positive-semidefinite:RuntimeWarning
   ignore:Generator:FutureWarning
   ignore:RandomState:FutureWarning
   ignore:the imp module:DeprecationWarning
   ignore:The default value of inc:FutureWarning
   ignore:`np.long` is a deprecated:DeprecationWarning:numba.core.types
   error:`np.bool` is a deprecated alias:DeprecationWarning:
   error:Passing None into shape:DeprecationWarning:

[mypy]
strict_equality=True
disallow_untyped_defs=True
disallow_incomplete_defs=True

[mypy-randomgen.conftest]
check_untyped_defs=False
disallow_untyped_defs=False

[mypy-randomgen._version]
check_untyped_defs=False
disallow_untyped_defs=False

[mypy-randomgen.tests.*]
check_untyped_defs=False
disallow_untyped_defs=False
disallow_incomplete_defs=False
