[metadata]
description_file = README.md
license_files =
   LICENSE.md

[flake8]
max-line-length = 88
extend-ignore = E203,E701
per-file-ignores =
    */randomgen/tests/data/stable_hashes.py: E501

[isort]
sections=FUTURE,COMPAT,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
known_first_party=randomgen
known_third_party=Cython,numpy,matplotlib,pandas,patsy,pytest,statsmodels,seaborn
combine_as_imports=True
skip_glob=**/**/*.pyx,**/**/*.in
known_compat=setuptools,setuptools.*
force_sort_within_sections=True
force_to_top=True
profile=black

[tool:pytest]
filterwarnings =
   error:covariance is not positive-semidefinite:RuntimeWarning
   ignore:Generator:FutureWarning
   ignore:RandomState:FutureWarning
   ignore:the imp module:DeprecationWarning
   ignore:The default value of inc:FutureWarning
   ignore:`np.long` is a deprecated:DeprecationWarning:numba.core.types
   error:`np.bool` is a deprecated alias:DeprecationWarning:
   error:Passing None into shape:DeprecationWarning:
   error:overflow encountered in scalar negative:RuntimeWarning

[mypy]
strict_equality=True
disallow_untyped_defs=True
disallow_incomplete_defs=True
ignore_missing_imports = True

[mypy-randomgen.conftest]
check_untyped_defs=False
disallow_untyped_defs=False

[mypy-randomgen._version]
check_untyped_defs=False
disallow_untyped_defs=False

[mypy-randomgen.tests.*]
check_untyped_defs=False
disallow_untyped_defs=False
disallow_incomplete_defs=False
