[metadata]
description_file = README.md
license_files =
   LICENSE.md

[flake8]
max-line-length = 88
extend-ignore = E203, E301, E302, E305
per-file-ignores =
    */randomgen/tests/data/stable_hashes.py: E501
    */randomgen/_seed_sequence.pyi: E301, E302
    */randomgen/aes.pyi: E301, E302
    */randomgen/chacha.pyi: E301, E302
    */randomgen/common.pyi: E301, E302
    */randomgen/dsfmt.pyi: E301, E302
    */randomgen/efiix64.pyi: E301, E302
    */randomgen/entropy.pyi: E301, E302
    */randomgen/generator.pyi: E301, E302
    */randomgen/hc128.pyi: E301, E302
    */randomgen/jsf.pyi: E301, E302
    */randomgen/lxm.pyi: E301, E302
    */randomgen/mt19937.pyi: E301, E302
    */randomgen/mt64.pyi: E301, E302
    */randomgen/mtrand.pyi: E301, E302
    */randomgen/pcg32.pyi: E301, E302
    */randomgen/pcg64.pyi: E301, E302
    */randomgen/philox.pyi: E301, E302
    */randomgen/rdrand.pyi: E301, E302
    */randomgen/romu.pyi: E301, E302
    */randomgen/sfc.pyi: E301, E302
    */randomgen/sfmt.pyi: E301, E302
    */randomgen/speck128.pyi: E301, E302
    */randomgen/tests/_shims.pyi: E301, E302
    */randomgen/threefry.pyi: E301, E302
    */randomgen/wrapper.pyi: E301, E302
    */randomgen/xoroshiro128.pyi: E301, E302
    */randomgen/xorshift1024.pyi: E301, E302
    */randomgen/xoshiro256.pyi: E301, E302




[isort]
sections=FUTURE,COMPAT,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
known_first_party=randomgen
known_third_party=Cython,numpy,matplotlib,pandas,patsy,pytest,statsmodels,seaborn
combine_as_imports=True
skip_glob=**/**/*.in
known_compat=setuptools,setuptools.*
force_sort_within_sections=True
force_to_top=True
profile=black

[tool:pytest]
filterwarnings =
   error:covariance is not positive-semidefinite:RuntimeWarning
   ignore:Generator:FutureWarning
   ignore:RandomState:FutureWarning
   ignore:the imp module:DeprecationWarning
   ignore:The default value of inc:FutureWarning
   ignore:`np.long` is a deprecated:DeprecationWarning:numba.core.types
   error:`np.bool` is a deprecated alias:DeprecationWarning:
   error:Passing None into shape:DeprecationWarning:
   error:overflow encountered in scalar negative:RuntimeWarning
   error:mode is deprecated and will be removed:FutureWarning

[tool.ruff.lint]
select = ["NPY201"]
typing-modules = ["lib"]

[mypy]
strict_equality=True
disallow_untyped_defs=True
disallow_incomplete_defs=True
ignore_missing_imports = True

[mypy-randomgen.conftest]
check_untyped_defs=False
disallow_untyped_defs=False

[mypy-randomgen._version]
check_untyped_defs=False
disallow_untyped_defs=False

[mypy-randomgen.tests.*]
check_untyped_defs=False
disallow_untyped_defs=False
disallow_incomplete_defs=False
